# Teleshake-1536

./: .gitignore  AUTHORS.rst  CLAUDE.md  Dockerfile  README.md  codegen.bat  codegen.sh  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  tests.yml
feature_xml/: settings.sila.xml  shakecontroller.sila.xml
src/sila2/driver/thermoscientific/teleshake1536/: .gitignore  __main__.py
src/sila2/driver/thermoscientific/teleshake1536/feature_implementations/: settingsservice_impl.py  shakecontroller_impl.py
src/sila2_driver/thermoscientific/teleshake1536/: __main__.py  server.py
src/sila2_driver/thermoscientific/teleshake1536/api/: frame.py  rpm_converter.py  teleshake.py
src/sila2_driver/thermoscientific/teleshake1536/feature_implementations/: cancelcontroller_impl.py  settingsservice_impl.py  shakecontroller_impl.py  simulationcontroller_impl.py
tests/: test_teleshake1536.py
