[project]
name = "sila2-drv-shaker-thermoscientific-teleshake1536"
version = "1.0.0"
authors = [
  { name="Erik Trygg", email="etrg@novonordisk.com" },
]
description = "SiLA2 driver for controlling Thermo Scientific's Teleshaker 1536"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=0.61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sila2*"]

[tool.setuptools.package-data]
"sila2.driver.thermoscientific.teleshake1536.generated" = [
    "*/*.sila.xml",
    "*/*.proto",
]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"


