[project]
name = "sila2-drv-shaker-thermoscientific-teleshake1536"
version = "1.0.1"
authors = [
  { name="Erik Trygg", email="etrg@novonordisk.com" },
]
description = "SiLA2 driver for controlling Thermo Scientific's Teleshaker 1536"
readme = "README.md"
requires-python= ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "async-timeout==4.0.2",
    "grpcio==1.75.1",
    "grpcio-tools==1.75.1",
    "ifaddr==0.2.0",
    "protobuf~=6.31.1",
    "pyserial==3.5",
    "sila2==0.10.1",
    "typer==0.7.0",
    "typing-extensions>=4.12.2",
    "zeroconf==0.39.4",
]

[build-system]
requires = ["setuptools>=0.61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sila2_driver*"]

[tool.setuptools.package-data]
"sila2_driver.thermoscientific.teleshake1536.generated" = [
    "*/*.sila.xml",
    "*/*.proto",
]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"


